[metadata]
name = ezchart
version=0.0.6
description = Python syntactic sugar for the repl
long_description = file: README.md
keywords = one, two
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
package_dir=
   =src
packages=find:
setup_requires=setuptools-git-version
install_requires =
	bokeh
	matplotlib
	seaborn
	pandas
	numpy
	pysugar

[options.packages.find]
where=src


testpaths = tests
addopts = -ra -W error::DeprecationWarning
